Fixed failure of certbot role to sign certificates on initial run
- nginx is now reloaded after adding it’s conf file so the location block is in place when signing auth requests hit the server

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -24,6 +24,11 @@
     owner: root
     group: root
   notify: reload nginx
+  register: configure_result
+
+- name: reload nginx service
+  service: name=nginx state=reloaded
+  when: configure_result|changed
 
 - name: configure certbot auto-renew cron
   tags: crontab
