ONE Build: Added alternate domains to vhost configuration

--- a/templates/nginx.conf
+++ b/templates/nginx.conf
@@ -1,6 +1,5 @@
-##
- # This file was deployed by Classy Llama admins. Please do not modify this file.
- ##
+# {{ ansible_managed_header }}
+# {{ ansible_managed }}
 
 location /.well-known/acme-challenge {
     root {{ certbot_webroot_path }};
