Prevent a broad matching regular expression from matching the certbot path
	# This was taking precedence prior to the change and preventing
	# certbot from authorizing an ssl cert
    location ~ /\. {
        deny all;
    }

--- a/templates/nginx.conf
+++ b/templates/nginx.conf
@@ -1,7 +1,7 @@
 # {{ ansible_managed_header }}
 # {{ ansible_managed }}
 
-location /.well-known/acme-challenge {
+location ^~ /.well-known/acme-challenge {
     root {{ certbot_webroot_path }};
     try_files $uri =404;
     auth_basic off;
