Changed certbot role default to disable auto-update of git checkout
Matt and I have both run into issues with this causing trouble on re-runs of playbooks, as with the default certbot-auto functionality, it will self-update in a way which introduces local changes to the git repo then failing the git pull used via ansible to update the certbot repo.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,7 +2,9 @@
 # certbot install parameters
 certbot_repo: https://github.com/certbot/certbot.git
 certbot_version: master
-certbot_keep_updated: yes
+
+# when enabling this, be aware that when certbot-auto is run via cron it will (by default) self-update, breaking this
+certbot_keep_updated: no
 
 # certbot install location
 certbot_dir: /opt/certbot
