Fixed issue in certbot role causing cron failure when certbot log dir isn't present
this can happen where the certbot role is applied to a server but not used to generate any certificates

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -25,3 +25,6 @@ certbot_domains:
 
 # Authenticate by placing a file under .well-known/acme-challenge/ in specified webroot
 certbot_webroot_path: /var/www/html/certbot
+
+# Default location of certbot's log directory (changing this only affects the crontab entry)
+certbot_logdir: /var/log/letsencrypt
