--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,2 +1,20 @@
 ---
 dependencies: []
+
+galaxy_info:
+  role_name: certbot
+  author: David Alger
+  description: Installs Certbot (Let's Encrypt) for RHEL/CentOS with Nginx.
+  license: MIT
+  min_ansible_version: 2.4
+
+  platforms:
+    - name: EL
+      versions:
+        - 7
+        - 6
+
+  galaxy_tags:
+    - system
+    - certbot
+    - nginx
