--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,7 +4,7 @@ certbot_repo: https://github.com/certbot/certbot.git
 certbot_version: master
 
 # when enabling this, be aware that when certbot-auto is run via cron it will (by default) self-update, breaking this
-certbot_keep_updated: no
+certbot_keep_updated: false
 
 # certbot install location
 certbot_dir: /opt/certbot
@@ -21,10 +21,11 @@ certbot_generate: false
 # Email address to register certificate with
 certbot_email:
 
-# List of domains to create certificates for
-certbot_domains: 
-  # - example.com
-  # - stage.example.com
+# List of domains to create certificates for. Example:
+#   certbot_domains:
+#     - example.com
+#     - stage.example.com
+certbot_domains: []
 
 # Authenticate by placing a file under .well-known/acme-challenge/ in specified webroot
 certbot_webroot_path: /var/www/html/certbot
